# credlayer-trust-hub

./: .env  .env.example  README.md  package.json  vite.config.ts  wrangler.jsonc
programs/: README.md
programs/credlayer/: Cargo.toml
programs/credlayer/src/: constants.rs  errors.rs  lib.rs
programs/credlayer/src/instructions/: add_metric.rs  add_risk_flag.rs  close_reputation.rs  initialize_reputation.rs  mod.rs  remove_risk_flag.rs  update_reputation.rs
programs/credlayer/src/state/: mod.rs  reputation.rs
src/: routeTree.gen.ts  styles.css
src/components/credlayer/: AnalysisView.tsx  OnChainReputationCard.tsx  (+2 more)
src/hooks/: use-credlayer-program.ts
src/lib/: audit.server.ts  buffer-polyfill.ts  buffer-shim.ts  copy.ts  credlayer-config.ts  credlayer-onchain.functions.ts  credlayer-onchain.server.ts  credlayer-onchain.ts  credlayer.functions.ts  credlayer.server.ts  terminal3.functions.ts
src/routes/: __root.tsx  dashboard.activity.tsx  dashboard.analyzer.tsx  dashboard.credentials.tsx  dashboard.developer.tsx  dashboard.index.tsx  dashboard.intelligence.tsx  dashboard.leaderboard.tsx  dashboard.permissions.tsx  dashboard.settings.tsx  dashboard.tsx  index.tsx  verify.tsx
supabase/: config.toml
supabase/migrations/: 20260511172520_50a1dde8-58e2-4032-ab65-800b2a96443e.sql  20260511172535_08c4addf-a238-45eb-995d-6fdf0b7fbbd7.sql  20260602174138_4ad823b1-c821-44ea-a433-530917c9a7d7.sql  20260603164240_b4161ac6-e4b1-44cd-8234-d0b4498b9ac1.sql  20260604174144_bc0489f4-4f7d-434c-ad56-d95647ab17e1.sql  20260605173525_03d3a2f7-1519-443d-9976-e49ac5ef030c.sql
(+5 files in other folders)
